@@ -54,7 +54,7 @@ public class GreedyProxyTest extends TestCase {
 	private StaticServiceProxyCreator createProxyCreator(Class[] classes) {
 		ClassLoader cl = getClass().getClassLoader();
 		BundleContext ctx = new MockBundleContext();
-		return new StaticServiceProxyCreator(classes, cl, ctx, ImportContextClassLoader.UNMANAGED, true);
+		return new StaticServiceProxyCreator(classes, cl, cl, ctx, ImportContextClassLoader.UNMANAGED, true);
 	}
 
 	protected void tearDown() throws Exception {
