@@ -12,6 +12,10 @@ General
 Package org.springframework.osgi.context
 * added reporting of Errors raised during delegated refresh in AbstractDelegatedExecutionApplicationContext
 
+Package org.springframework.osgi.service
+* changed the proxying classloader strategy to address package dependency visibility
+* fixed usage of incorrect class loader for imported services with client thread context class loader management
+
 Package org.springframework.osgi.io
 * fixed classpath pattern matching on certain resources when the default Bundle-ClassPath entry (.) is not specified
 
